--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,47 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "finite-plant",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Job Description:\n",
-      "\n",
-      "\n",
-      "TG 8\n",
-      "\n",
-      "Details of the role and how it fits into the team:\n",
-      "\n",
-      "Reporting to the Team Lead of the Data Analytics team in Berlin, the Data Analyst will be member of Group Audits Center of excellence (CoE) for Data Analytics. This CoE is responsible to support all functions of Group Audit with data analytics services and audit automation solutions. As a newly founded team, the Data Analyst will do pioneer work in projects and help Group Audit to establish innovative and effective processes which will become instrumental for the success of the function.\n",
-      "\n",
-      "Key Responsibilities:\n",
-      "Evaluate data analytics requests and work collaboratively with auditors, data owners and developers to deliver working solutions and analytics in an agile and iterative manner.\n",
-      "Identify data analytics opportunities and use cases, liaise with the audit teams, and perform any standard or advanced/ specialized analytics work.\n",
-      "Identify automation opportunities and develop solutions that simplify audit processes and make them more efficient.\n",
-      "Promote the adoption and integration of data science into the Group Audit organisation and inspire Group Audit colleagues by sharing background on successful adoption.\n",
-      "Apply highest quality standards as your solution will become an integral part of audit execution processes.\n",
-      "Skills & Qualifications:\n",
-      "Master or Bachelor Degree (or equivalent) from an accredited college or university (or equivalent) in a quantitative field (Mathematics, Statistics, Physics, Engineering, Computer Science, Economics, Chemistry etc.) or equivalent work experience ideally in the banking industry.\n",
-      "Experience applying data science techniques to solve real world problems (AI, machine learning, advanced statistics, text analytics, NLP etc.)\n",
-      "Experience using a broad range of tools, including Big Data, NoSQL, data preparation (SQL, ETL), Programming (Python, R), modelling packages (Pandas, Scikit Learn, NLTK, Spacy, Spark ML), reporting and Visualization (Tableau, QlikSense, matplotlib)\n",
-      "Experience in agile methodology (scrum), relevant tools (confluence, jira) and software engineering principles\n",
-      "Innovative, creative, articulate and able to work directly with a broad range of stakeholders\n",
-      "Our offer:\n",
-      "Work in dynamic and flexible environment across a diverse portfolio of projects\n",
-      "Training opportunities in new technologies and practises as well as Group Audit methodology\n",
-      "Some opportunities to travel\n",
-      "Posting End Date: 18.08.2020, extended until further notice\n",
-      "\n",
-      "Our values define the working environment we strive to create – diverse, supportive and welcoming of different views. We embrace a culture reflecting a variety of perspectives, insights and backgrounds to drive innovation. We build talented and diverse teams to drive business results and encourage our people to develop to their full potential. Talk to us about flexible work arrangements and other initiatives we offer.\n",
-      "\n",
-      "We promote good working relationships and encourage high standards of conduct and work performance. We welcome applications from talented people from all cultures, countries, races, genders, sexual orientations, disabilities, beliefs and generations and are committed to providing a working environment free from harassment, discrimination and retaliation.\n",
-      "\n",
-      "Click here to find out more about our diversity and inclusion policy and initiatives.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "9.73841059602649"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -50,7 +22,11 @@
     "\n",
     "df = pd.read_json(\"../raw_data/glassdoor_scraper_output/data_scientist_in_berlin_2020-09-03.json\")\n",
     "\n",
-    "print(df[\"description\"][0])"
+    "for i in range(0,len(df)):\n",
+    "    sumi = 0\n",
+    "    sumi += len(df[\"description\"][i])\n",
+    "    \n",
+    "sumi/len(df)"
    ]
   },
   {
