--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "id": "metropolitan-playback",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "id": "radical-prototype",
    "metadata": {},
    "outputs": [],
@@ -104,6 +104,7 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "import string\n",
+    "from nltk.tokenize import sent_tokenize\n",
     "'''\n",
     "Preprocessing for the Job descriptions in paresed in senteneces.\n",
     "Modified form the other preprocessing pipeline\n",
@@ -123,6 +124,7 @@
     "    stop_words = set(stopwords.words('english')) \n",
     "    new_text = []\n",
     "    for sentence in text:\n",
+    "        new_sentence = tokenize(sentence)\n",
     "        new_sentence = [w for w in sentence if not w in stop_words and w] \n",
     "        new_text.append(new_sentence)\n",
     "  \n",
@@ -131,41 +133,346 @@
     "\n",
     "def remove_punctuation_mod(text):\n",
     "    \n",
-    "    string.punctuation.replace(\".\",\"\")\n",
-    "    for punctuation in string.punctuation:\n",
+    "    punct = string.punctuation.replace(\".\",\"\")\n",
+    "    for punctuation in punct:\n",
     "        text = text.replace(punctuation, '')\n",
     "    \n",
     "    return text\n",
     "\n",
     "\n",
+    "def remove_stopwords(text):\n",
+    "\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    new_text = []\n",
+    "    for sent in text:\n",
+    "        sent = word_tokenize(sent) \n",
+    "        sent = [w for w in sent if w not in stop_words and w not in string.punctuation and w]  \n",
+    "        new_text.append(sent)\n",
+    "    return new_text\n",
+    "\n",
+    "\n",
     "def lemmatize_words(text):\n",
     "    \n",
     "    lemmatizer = WordNetLemmatizer()\n",
-    "    lemmataized_text = []\n",
     "    for sentence in text:\n",
-    "        lemmatized = [lemmatizer.lemmatize(word) for word in sentence]\n",
-    "        lemmataized_text.append(lemmatized)\n",
-    "\n",
-    "    return lemmataized_text\n",
+    "        for word in sentence:\n",
+    "            word = lemmatizer.lemmatize(word)\n",
+    "        \n",
+    "    return text\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
+   "id": "checked-equilibrium",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### filter out german offers\n",
+    "df = df[df[\"tag_language\"] == \"en\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "fitting-egyptian",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Apply preprocessing to df\n",
-    "df[\"job_text_sent\"]= df[\"job_text\"].apply(to_lower)\n",
-    "                                    .apply(remove_number)\n",
-    "                                    .apply(remove_punctuation_mod)\n",
-    "                                    .apply(lambda x : x.replace('\\n',' '))\n",
-    "                                    .apply(lambda x: [sent.split(' ') for sent in x.split('.')])\n",
-    "                                    .apply(remove_stopwords_mod)\n",
-    "                                    .apply(lemmatize_words)\n"
+    "df[\"job_text_sent\"]= df[\"job_text\"].apply(to_lower).apply(remove_number)\\\n",
+    "                                    .apply(lambda x : x.replace('\\n',' '))\\\n",
+    "                                    .apply(remove_punctuation_mod)\\\n",
+    "                                    .apply(lambda x: sent_tokenize(x))\\\n",
+    "                                    .apply(remove_stopwords)\\\n",
+    "                                    .apply(lemmatize_words)\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "considerable-makeup",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['responsible',\n",
+       "  'improvement',\n",
+       "  'taledo',\n",
+       "  '’',\n",
+       "  'search',\n",
+       "  'matching',\n",
+       "  'engine',\n",
+       "  'candidates',\n",
+       "  'jobs',\n",
+       "  'business',\n",
+       "  'drivers',\n",
+       "  'data',\n",
+       "  'science'],\n",
+       " ['develop',\n",
+       "  'compare',\n",
+       "  'different',\n",
+       "  'algorithmic',\n",
+       "  'approaches',\n",
+       "  'andor',\n",
+       "  'ml',\n",
+       "  'models'],\n",
+       " ['monitor', 'production', 'performance', 'measure', 'success', 'work'],\n",
+       " ['update', 'outdated', 'models'],\n",
+       " ['research',\n",
+       "  'discuss',\n",
+       "  'algorithmical',\n",
+       "  'well',\n",
+       "  'model',\n",
+       "  'improvements',\n",
+       "  'regularly'],\n",
+       " ['knowledgeable',\n",
+       "  'developed',\n",
+       "  'ai',\n",
+       "  'community',\n",
+       "  'propose',\n",
+       "  '’',\n",
+       "  'applicable',\n",
+       "  'taledo'],\n",
+       " ['expect', 'curious', 'nature'],\n",
+       " ['like',\n",
+       "  'solve',\n",
+       "  'challenging',\n",
+       "  'problems',\n",
+       "  'proficient',\n",
+       "  'python',\n",
+       "  'worked',\n",
+       "  'relevant',\n",
+       "  'libraries',\n",
+       "  'know',\n",
+       "  'use',\n",
+       "  'data',\n",
+       "  'handling',\n",
+       "  'numpy',\n",
+       "  'pandas',\n",
+       "  'dask',\n",
+       "  'psycopg',\n",
+       "  'mldl',\n",
+       "  'scikitlearn',\n",
+       "  'xgboost',\n",
+       "  'keras',\n",
+       "  'pytorch',\n",
+       "  'spacy',\n",
+       "  'visualization',\n",
+       "  'seaborn',\n",
+       "  'matplotlib',\n",
+       "  'experience',\n",
+       "  'evaluating',\n",
+       "  'different',\n",
+       "  'approaches',\n",
+       "  'choosing',\n",
+       "  'appropriate',\n",
+       "  'metric',\n",
+       "  'worked',\n",
+       "  'search',\n",
+       "  'matching',\n",
+       "  'nlp',\n",
+       "  'using',\n",
+       "  'various',\n",
+       "  'approaches',\n",
+       "  'mldl',\n",
+       "  'besides',\n",
+       "  'success',\n",
+       "  'stories',\n",
+       "  'also',\n",
+       "  'know',\n",
+       "  '’',\n",
+       "  'worked',\n",
+       "  'experience',\n",
+       "  'elasticsearch',\n",
+       "  'plus',\n",
+       "  'translate',\n",
+       "  'user',\n",
+       "  'talk',\n",
+       "  'observed',\n",
+       "  'behaviour',\n",
+       "  'algorithmic',\n",
+       "  'approach'],\n",
+       " ['switch',\n",
+       "  'fluently',\n",
+       "  'levels',\n",
+       "  'details',\n",
+       "  'big',\n",
+       "  'picture',\n",
+       "  'algorithmical',\n",
+       "  'details',\n",
+       "  'creative',\n",
+       "  'generate',\n",
+       "  'ideas'],\n",
+       " ['revolutionizing',\n",
+       "  'industry',\n",
+       "  'wed',\n",
+       "  'love',\n",
+       "  'see',\n",
+       "  'exceptional',\n",
+       "  'ideas',\n",
+       "  '’',\n",
+       "  'handson',\n",
+       "  'like',\n",
+       "  'get',\n",
+       "  'things',\n",
+       "  'done'],\n",
+       " ['work',\n",
+       "  'autonomously',\n",
+       "  'proactive',\n",
+       "  'speak',\n",
+       "  'fluent',\n",
+       "  'english',\n",
+       "  'berlin',\n",
+       "  'plus',\n",
+       "  'offer',\n",
+       "  'work',\n",
+       "  'challenging',\n",
+       "  'domain',\n",
+       "  'matching',\n",
+       "  'candidates',\n",
+       "  'jobs',\n",
+       "  'work',\n",
+       "  'mission',\n",
+       "  'real',\n",
+       "  'impact',\n",
+       "  'people',\n",
+       "  'direct',\n",
+       "  'impact',\n",
+       "  'candidates',\n",
+       "  'career',\n",
+       "  'development',\n",
+       "  'work',\n",
+       "  'decides',\n",
+       "  'put',\n",
+       "  'cv'],\n",
+       " ['furthermore', 'support', 'companies', 'important', 'asset', 'people'],\n",
+       " ['responsibility',\n",
+       "  'start',\n",
+       "  'flat',\n",
+       "  'hierarchy',\n",
+       "  'environment',\n",
+       "  '‘',\n",
+       "  'doer',\n",
+       "  'maker',\n",
+       "  '’',\n",
+       "  'mindset'],\n",
+       " ['contribute',\n",
+       "  'directly',\n",
+       "  'taledos',\n",
+       "  'growth',\n",
+       "  'story',\n",
+       "  'leave',\n",
+       "  'footprint',\n",
+       "  'trustful',\n",
+       "  'environment',\n",
+       "  'open',\n",
+       "  'conversations',\n",
+       "  'transparency',\n",
+       "  'blame',\n",
+       "  'shame',\n",
+       "  'culture',\n",
+       "  'team',\n",
+       "  'personal',\n",
+       "  'development',\n",
+       "  'plan',\n",
+       "  'discussed',\n",
+       "  'manager',\n",
+       "  'individually',\n",
+       "  'frequent',\n",
+       "  'feedback',\n",
+       "  'manager',\n",
+       "  'knowledge',\n",
+       "  'sharing',\n",
+       "  'constant',\n",
+       "  'learning',\n",
+       "  'e.g'],\n",
+       " ['educational',\n",
+       "  'budget',\n",
+       "  'hackathons',\n",
+       "  'flexible',\n",
+       "  'working',\n",
+       "  'hours',\n",
+       "  'home',\n",
+       "  'office'],\n",
+       " ['maybe',\n",
+       "  'attractive',\n",
+       "  'corona',\n",
+       "  'office',\n",
+       "  'additional',\n",
+       "  'vacation',\n",
+       "  'days',\n",
+       "  'based',\n",
+       "  'tenure',\n",
+       "  'seniority',\n",
+       "  'international',\n",
+       "  'team',\n",
+       "  'team',\n",
+       "  'events',\n",
+       "  'socializing',\n",
+       "  'activities',\n",
+       "  'taledo',\n",
+       "  'allinone',\n",
+       "  'suite',\n",
+       "  'talent',\n",
+       "  'acquisition',\n",
+       "  'relations'],\n",
+       " ['offer',\n",
+       "  'talent',\n",
+       "  'marketing',\n",
+       "  'recruiting',\n",
+       "  'service',\n",
+       "  'candidate',\n",
+       "  'management',\n",
+       "  'single',\n",
+       "  'platform'],\n",
+       " ['part',\n",
+       "  'solution',\n",
+       "  'matching',\n",
+       "  'top',\n",
+       "  'candidates',\n",
+       "  'best',\n",
+       "  'companies',\n",
+       "  'germany',\n",
+       "  'received',\n",
+       "  'funding',\n",
+       "  'eu'],\n",
+       " ['besides',\n",
+       "  'technology',\n",
+       "  'team',\n",
+       "  'recruiting',\n",
+       "  'experts',\n",
+       "  '’',\n",
+       "  'lose',\n",
+       "  'human',\n",
+       "  'touch',\n",
+       "  'oftentimes',\n",
+       "  'missing',\n",
+       "  'recruiting',\n",
+       "  'solutions'],\n",
+       " ['heute', 'weiter', 'zur', 'bewerbung', 'diesen', 'job', 'melden']]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"job_text_sent\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "adopted-strike",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -177,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "id": "stunning-reset",
    "metadata": {},
    "outputs": [],
@@ -195,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "id": "neither-round",
    "metadata": {},
    "outputs": [],
@@ -221,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "id": "graphic-messenger",
    "metadata": {
     "scrolled": true
@@ -230,19 +537,19 @@
     {
      "data": {
       "text/plain": [
-       "[('r', 0.9177238941192627),\n",
-       " ('java', 0.9106347560882568),\n",
-       " ('scala', 0.907720685005188),\n",
-       " ('python_java', 0.8880042433738708),\n",
-       " ('programming_language', 0.8729966878890991),\n",
-       " ('sql', 0.8677836656570435),\n",
-       " ('pyspark', 0.8671956062316895),\n",
-       " ('spring', 0.8456253409385681),\n",
-       " ('sa', 0.842881441116333),\n",
-       " ('python_r', 0.8312711119651794)]"
+       "[('scala', 0.9750685095787048),\n",
+       " ('java', 0.9682307243347168),\n",
+       " ('programming_languages', 0.966687798500061),\n",
+       " ('r', 0.9658426642417908),\n",
+       " ('programming', 0.9524619579315186),\n",
+       " ('sql', 0.9322541952133179),\n",
+       " ('javascript', 0.9288321733474731),\n",
+       " ('proficiency', 0.9236559867858887),\n",
+       " ('least_one', 0.9181228876113892),\n",
+       " ('proficient', 0.9148669242858887)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,6 +576,36 @@
     "\n",
     "### most similar words example\n",
     "w2v_model2.wv.most_similar([\"python\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "cleared-namibia",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('hands', 0.9449827075004578),\n",
+       " ('programming_languages', 0.9349161386489868),\n",
+       " ('similar', 0.9235848784446716),\n",
+       " ('least_one', 0.923090934753418),\n",
+       " ('software_engineering', 0.9210233688354492),\n",
+       " ('programming', 0.9171253442764282),\n",
+       " ('java', 0.9100304841995239),\n",
+       " ('scala', 0.9072116613388062),\n",
+       " ('solid', 0.9025342464447021),\n",
+       " ('theoretical', 0.8921900391578674)]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w2v_model2.wv.most_similar([\"science\",\"python\",\"r\"])"
    ]
   },
   {
