populated SQL database

--- a/notebooks/doc2vec_similarity.ipynb
+++ b/notebooks/doc2vec_similarity.ipynb
@@ -673,7 +673,7 @@
    "execution_count": 20,
    "id": "owned-arlington",
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "tags": []
    },
    "outputs": [
