--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "stunning-reset",
    "metadata": {},
    "outputs": [],
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "neither-round",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "graphic-messenger",
    "metadata": {
     "scrolled": true
@@ -1419,19 +1419,19 @@
     {
      "data": {
       "text/plain": [
-       "[('python_r', 0.9359096884727478),\n",
-       " ('java', 0.9265039563179016),\n",
-       " ('programming_languages', 0.9248203039169312),\n",
-       " ('scala', 0.921066164970398),\n",
-       " ('kotlin', 0.9024293422698975),\n",
-       " ('programming', 0.8929836750030518),\n",
-       " ('proficient', 0.8897788524627686),\n",
-       " ('sql', 0.8797328472137451),\n",
-       " ('r', 0.8793141841888428),\n",
-       " ('javascript', 0.876949667930603)]"
+       "[('knowledge', 0.9957853555679321),\n",
+       " ('spark', 0.9938962459564209),\n",
+       " ('field', 0.9938292503356934),\n",
+       " ('computer_science', 0.9924174547195435),\n",
+       " ('cloud', 0.9908705949783325),\n",
+       " ('engineering', 0.9908539056777954),\n",
+       " ('infrastructure', 0.990630030632019),\n",
+       " ('design', 0.9901478290557861),\n",
+       " ('proficiency', 0.9899214506149292),\n",
+       " ('java', 0.9878365993499756)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,9 +1466,7 @@
    "id": "stylish-faith",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "w2v_model2.save(\"w2v_model_bigrams_v1\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1519,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "christian-persian",
    "metadata": {
     "scrolled": true
@@ -1537,18 +1535,8 @@
       "\n",
       "All the layers of TFT5ForConditionalGeneration were initialized from the model checkpoint at t5-small.\n",
       "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFT5ForConditionalGeneration for predictions without further training.\n",
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (1091 > 512). Running this sequence through the model will result in indexing errors\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (724 > 512). Running this sequence through the model will result in indexing errors\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'summary_text': 'TD Reply is an innovation and marketing consultancy and part of the Reply Group . we are working on international data science projects for our clients such as Audi, Adidas, Coca-Cola, Miele, Telefonica, and BMW . you will collaborate with an experienced and enthusiastic'}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1558,7 +1546,7 @@
     "\n",
     "summarizer = pipeline(\"summarization\")\n",
     "\n",
-    "summarizer(df[\"job_text\"][10],min_length=20, max_length=60)"
+    "summarizer(df[\"job_text\"][10],min_length=120, max_length=120)"
    ]
   },
   {
@@ -1676,182 +1664,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "id": "residential-immunology",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['mbition',\n",
-       " 'mercedes–benz',\n",
-       " 'bringing',\n",
-       " 'automotive',\n",
-       " 'industry',\n",
-       " 'future',\n",
-       " 'working',\n",
-       " 'softwaredefined',\n",
-       " 'architecture',\n",
-       " 'allows',\n",
-       " 'us',\n",
-       " 'create',\n",
-       " 'stateoftheart',\n",
-       " 'customer',\n",
-       " 'functions',\n",
-       " 'span',\n",
-       " 'one',\n",
-       " 'domain',\n",
-       " 'controllers',\n",
-       " 'significant',\n",
-       " 'processing',\n",
-       " 'power']"
+       "0       [[führende, app, marketing, beratungsagentur, ...\n",
+       "1       [[student, mfx, work, collaboration, team, bus...\n",
+       "4       [[phiture, growth, consultancy, closeknit, tea...\n",
+       "5       [[operating], [], [desire], [], [passion], [pu...\n",
+       "6       [[head, finance, home, mission, housing, every...\n",
+       "                              ...                        \n",
+       "1841    [[zalando, fulfillment, controller, perform], ...\n",
+       "1846    [[caya], [manage, process, caya, platform], [c...\n",
+       "1849    [[position, point, contact, architecture, soft...\n",
+       "1902    [[position, point, contact, architecture, soft...\n",
+       "1919    [[industry, market, road, freight, company, ge...\n",
+       "Name: job_text_sent, Length: 839, dtype: object"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"job_text_sent\"][10][0]"
+    "df[\"job_text_sent\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "suited-mozambique",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['mbition',\n",
-       "  'industry',\n",
-       "  'future',\n",
-       "  'architecture',\n",
-       "  'customer',\n",
-       "  'domain',\n",
-       "  'power'],\n",
-       " ['highperformance', 'domain'],\n",
-       " [],\n",
-       " ['sindelfingen', 'subsidiary', 'art'],\n",
-       " ['team', 'creativity', 'teamwork'],\n",
-       " ['passionate', 'technology', 'apps'],\n",
-       " ['role', 'audio', 'team', 'abstraction', 'layer', 'audio', 'hardware'],\n",
-       " ['goal',\n",
-       "  'c',\n",
-       "  'application',\n",
-       "  'complexity',\n",
-       "  'realtime',\n",
-       "  'policy',\n",
-       "  'management',\n",
-       "  'prioritization'],\n",
-       " ['setup', 'coordinate', 'end', 'customer'],\n",
-       " ['maintain',\n",
-       "  'team',\n",
-       "  'backlog',\n",
-       "  'define',\n",
-       "  'communicate',\n",
-       "  'define',\n",
-       "  'cooperation',\n",
-       "  'burn',\n",
-       "  'time',\n",
-       "  'quality',\n",
-       "  'communication',\n",
-       "  'development',\n",
-       "  'team',\n",
-       "  'education',\n",
-       "  'computer',\n",
-       "  'science',\n",
-       "  'information',\n",
-       "  'technology',\n",
-       "  'communication',\n",
-       "  'technology',\n",
-       "  'qualification',\n",
-       "  'experience',\n",
-       "  'product',\n",
-       "  'owner',\n",
-       "  'experience',\n",
-       "  'building',\n",
-       "  'audio',\n",
-       "  'software',\n",
-       "  'test',\n",
-       "  'development',\n",
-       "  'domain'],\n",
-       " ['spice',\n",
-       "  'asil',\n",
-       "  'protection',\n",
-       "  'industry',\n",
-       "  'orientation',\n",
-       "  'communication',\n",
-       "  'project',\n",
-       "  'life',\n",
-       "  'cycle',\n",
-       "  'experience',\n",
-       "  'pulseaudio',\n",
-       "  'alsa',\n",
-       "  'experience',\n",
-       "  'processing',\n",
-       "  'experience',\n",
-       "  'yocto',\n",
-       "  'experience',\n",
-       "  'invehicle',\n",
-       "  'andor',\n",
-       "  'python',\n",
-       "  'customer',\n",
-       "  'degree',\n",
-       "  'flexibility',\n",
-       "  'willingness',\n",
-       "  'travel',\n",
-       "  'communication',\n",
-       "  'team',\n",
-       "  'work',\n",
-       "  'language',\n",
-       "  'offer',\n",
-       "  'chance',\n",
-       "  'work',\n",
-       "  'generation',\n",
-       "  'power',\n",
-       "  'innovation',\n",
-       "  'part',\n",
-       "  'daimler',\n",
-       "  'company',\n",
-       "  'day',\n",
-       "  'work'],\n",
-       " ['look',\n",
-       "  'mbition.io',\n",
-       "  'scroll',\n",
-       "  'mbition',\n",
-       "  'experience',\n",
-       "  'culture',\n",
-       "  'brand',\n",
-       "  'office',\n",
-       "  'spree',\n",
-       "  'transportation',\n",
-       "  'health',\n",
-       "  'coffee',\n",
-       "  'application',\n",
-       "  'information',\n",
-       "  'job',\n",
-       "  'title',\n",
-       "  'reference',\n",
-       "  'number',\n",
-       "  'date',\n",
-       "  'health',\n",
-       "  'work',\n",
-       "  'employee'],\n",
-       " ['gerade', 'geschaltet', 'weiter', 'zur', 'bewerbung', 'job', 'melden']]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.tag import pos_tag\n",
     "\n",
@@ -1867,8 +1717,9 @@
     "    return new_text\n",
     "    \n",
     "\n",
-    "noun_extractor(df[\"job_text_sent\"][10])\n",
+    "df[\"job_text_sent\"] =df[\"job_text_sent\"].apply(noun_extractor)\n",
     "              \n",
+    "\n",
     "            \n",
     "       \n",
     "        \n",
