remove duplicates method

--- a/notebooks/doc2vec_similarity.ipynb
+++ b/notebooks/doc2vec_similarity.ipynb
@@ -461,30 +461,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "military-tyler",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0      [responsible, improvement, taledos, search, ma...\n",
-       "1      [looking, senior, software, engineer, extensiv...\n",
-       "2      [looking, senior, software, engineer, extensiv...\n",
-       "3      [member, data, engineering, team, responsible,...\n",
-       "4      [digittyio, international, startup, headquarte...\n",
-       "                             ...                        \n",
-       "702    [zalando, fulfillment, solutions, team, lookin...\n",
-       "703    [caya, digitizes, small, mediumsized, business...\n",
-       "704    [position, youll, first, point, contact, comes...\n",
-       "705    [position, youll, first, point, contact, comes...\n",
-       "706    [digitize, logistics, industry, bn, market, eu...\n",
-       "Name: clean, Length: 707, dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_eng' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-44c38f623d4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_eng\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'clean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_eng' is not defined"
+     ]
     }
    ],
    "source": [
@@ -616,7 +606,7 @@
    ],
    "source": [
     "# train the model\n",
-    "for epoch in range(20):\n",
+    "for epoch in range(10):\n",
     "    if epoch % 2 == 0:\n",
     "        print(f'training epoch {epoch}')\n",
     "    model_dbow.train(texts_tagged, total_examples=model_dbow.corpus_count, epochs=10)"
